# FactoryBench

./: .env.example  .gitignore  NOTES_implementation.md  README.md  pyproject.toml
datasets/: basic_statistics.json  pattern_recognition.json  step_functions.json
factorybench/: cli.py  config.py  stages.py  state.py
factorybench/adapters/: azure_openai.py  base.py  mock.py  openai.py
factorybench/api/: app.py  charts.py
factorybench/data/: loader_tl.py
factorybench/eval/: runner.py
factorybench/generators/: rca_simple.py
factorybench/metrics/: telemetry_literacy.py
factorybench/viz/: __init__.py  charts.py
fixtures/: stage1.json
frontend/: package-lock.json  package.json  remix.config.cjs  tsconfig.json
frontend/app/: root.tsx
frontend/app/routes/: _index.tsx  analysis.tsx  leaderboard.tsx  readme.tsx  run.tsx  runs.$id.tsx
frontend/app/styles/: global.css
